<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_tip_amount">0.0</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="tip_label">Tip:</string>
    <string name="tip_value">$0.0</string>
    <string name="total_label">Total:</string>
    <string name="total_value">$0.0</string>
    <string name="space">__</string>
    <string name="tip_">Tip %: 0  </string>
    <string name="_0_0">0.0</string>
    <string name="tip__">Tip:</string>
    <string name="total_">Total:</string>
    <string name="bill_amount_">Bill amount:</string>
</resources>
